# -*- coding: utf-8 -*-

2009-09-01  John Barnette  <jbarnette@rubyforge.org>

	* lib/rubygems/version.rb: Gem::Version immutability
	burndown. Changed canonical internal representation to an
	Array. Refactored significant amounts of the internals for
	clarity. Breaking change: Gem::Version::Requirement is no longer
	available, use Gem::Requirement instead. Breaking change: custom
	YAML marshaling is gone. Credit to Yehuda Katz for certain bits of
	a related patch.
	* test/test_gem_dependency.rb: Moved a bunch of tests over from
	test_gem_version.rb. Work in progress.
	* test/test_gem_specification.rb: Removed a failing YAML
	test. Many more will be going away shortly.
	* test/test_gem_version.rb: Significant refactoring for
	maintainability and clarity. Moved a ton of poorly-placed tests to
	test_gem_dependency.rb for future refactoring.

2009-08-19  Ryan Davis  <ryand-ruby@zenspider.com>

	* lib/rubygems.rb: Cleanup of rdoc and file layout.
	* lib/rubygems/versions.rb: Added Version#spermy_recommendation
	and fixed bug in Version::Part#inspect. General cleanup.

2009-07-29  John Barnette <jbarnette@rubyforge.org>

	* lib/rubygems/package/tar_input.rb:  Add Maglev to the list of
	  implementations with working Zlib. Bug #26790 by Peter McLain.

2009-07-21  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/package.rb:  Remove dangling digest require.  Reported
	  by Jeremy Kemper.

2009-06-25  Eric Hodel  <drbrain@segment7.net>

	* release_notes/:  Merged into History.txt for Hoe.
	* lib/rubygems/commands/setup_command.rb:  Streamlined install text.

2009-06-23  Eric Hodel  <drbrain@segment7.net>

	* release_notes/rel_1_3_5.rdoc:  RubyGems 1.3.5 release notes.
	* lib/rubygems/builder.rb:  Only print out with verbose.
	* lib/rubygems/package_task.rb:  Only print out with -t.

2009-06-12  Ryan Davis  <ryand@zenspider.com>

	* Rakefile:  Switched to Hoe.

2009-06-10  Phil Hagelberg <technomancy@gmail.com>
